# lolt_detection

./: ALL_REQUIRED_FIXES.md  CLAUDE_REASONING_USAGE.md  COMPREHENSIVE_FIXES_SUMMARY.md  CRITICAL_FIX_EVALUATION.md  EVALUATION_REPORT.md  FIXES_AND_IMPROVEMENTS.md  Home Assignment Ai Research.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_V2.md  LINKEDIN_POST.md  Makefile  README.md  SOLUTION_SUMMARY.md  SUMMARY_OF_FIXES.md  app.py  data_loader.py  ensemble.py  evaluate.py  feature_explanations.md  feature_extractor.py  inference_benchmark.json  llm_distiller.py  main.py  models.py  obfuscation_detector.py  pyproject.toml  survivalism_features.py  train.py  train_neural_network.ipynb
lotl_detector/: EVALUATION_REPORT.md  Home Assignment Ai Research.md  LINKEDIN_POST.md  LOLWTC_A_Deep_Learning_Approach_for_Detecting_Living_Off_the_Land_Attacks (1).md  SOLUTION_SUMMARY.md  analyze_failure_patterns.py  app.py  augmentation.py  best_model.pt  compare_with_claude.py  data.jsonl  data_disagree.csv  data_loader.py  disagreement_detector.py  eda.py  ensemble.py  ensemble_old.py  evaluate.py  evaluate_inference_time.py  explain_features.py  failure_patterns.py  feature_extractor.py  llm_distiller.py  main.py  models.py  obfuscation_detector.py  shap_explainer.py  survivalism_features.py  temp.json  train.py  train_llm_distillation.ipynb  train_neural_network.ipynb
models/: count_features.py  evaluation_results.json  feature_names.pkl  kfold_evaluation_results.json  neural_network.pt  random_forest.pkl
reports/: better_than_cluade.json
tests/: test_failure_logic.py
